force-app/main/default/objects/Account/fields/ContactCOunt__c.field-meta.xml
<CustomField>
    <fullName>ContactCOunt__c</fullName>
    <label>ContactCOunt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>