force-app/main/default/objects/Account/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>