force-app/main/default/objects/Account/validationRules/MoreThan200.validationRule-meta.xml
<ValidationRule>
    <fullName>MoreThan200</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()  &amp;&amp;  NumberOfEmployees &gt; 200</errorConditionFormula>
    <errorMessage>Number of Employees are greater than 200</errorMessage>
</ValidationRule>